--- a/myapplication/src/main/res/layout/activity_result.xml
+++ b/myapplication/src/main/res/layout/activity_result.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_result"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
 
     tools:context="com.moly.hooyee.myapplication.ResultActivity">
 
@@ -15,4 +16,18 @@
         android:layout_gravity="center"
         android:src="@mipmap/ic_launcher" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/photo1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="matrix"
+        android:src="@mipmap/ic_launcher"/>
+
+    <Button
+        android:id="@+id/bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="matrix"
+        android:text="button"/>
+
+</LinearLayout>
