* 实现放大图片，和边界判定

--- a/myapplication/src/main/res/layout/activity_main1.xml
+++ b/myapplication/src/main/res/layout/activity_main1.xml
@@ -3,10 +3,15 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:fitsSystemWindows="true">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <com.moly.hooyee.cutphoto.PhotoHandle
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
         android:scaleType="matrix"/>
 </LinearLayout>
