--- a/myapplication/src/main/res/layout/activity_result.xml
+++ b/myapplication/src/main/res/layout/activity_result.xml
@@ -4,68 +4,50 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fadingEdge="vertical"
-    tools:context="com.moly.hooyee.myapplication.ResultActivity"
-    >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_result"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-
     tools:context="com.moly.hooyee.myapplication.ResultActivity">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/photo1"
+        android:orientation="vertical"
+        tools:context="com.moly.hooyee.myapplication.ResultActivity">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:id="@+id/photo2"
+            android:layout_height="wrap_content">
+
+            <com.moly.hooyee.cutphoto.PhotoView
+                android:id="@+id/photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="matrix"
+                android:src="@mipmap/ic_launcher" />
+
+            <com.moly.hooyee.cutphoto.CoverView
+                android:id="@+id/cover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/bt_photo_cut_1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/photo3"
+            android:layout_height="wrap_content"
+            android:text="cut 1" />
+        <Button
+            android:id="@+id/bt_photo_cut_2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="cut 2" />
+        <Button
+            android:id="@+id/bt_photo_cut_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="cut 3" />
+
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/photo4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:id="@+id/photo5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/photo6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    <com.moly.hooyee.cutphoto.PhotoView
-        android:id="@+id/photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="matrix"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher" />
-
-
-    <Button
-        android:id="@+id/bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="matrix"
-        android:text="button"/>
-
-</LinearLayout>
 </ScrollView>
